added letters from js dynamically

--- a/starter-code/game.html
+++ b/starter-code/game.html
@@ -12,7 +12,7 @@
 </head>
 <body>
  
-<main class="w-screen h-screen flex flex-col">
+<main class="w-screen h-screen flex flex-col gap-24">
   <section data-name="pick_category_heading" class="flex justify-around items-center gap-[400px]">
     <aside class="flex items-center gap-16">
         <div class="menu_btn cursor-pointer"></div>
@@ -27,9 +27,8 @@
   </section>
   
   <!-- section letters -->
-<section class="w-full ">
-
-</section>
+<section id="letters_place" class="w-full h-[272px] flex flex-wrap justify-center"></section>
+<section class="w-full h-full" id="alphabet"></section>
 </main>
 
 </body>
